Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3146

Runtime filters sometimes not attached to coordinator fragment

    XMLWordPrintableJSON

Details

    Description

      A query that should produce a filter from the coordinator fragment sometimes has the following filter routing table:

      ID  Src. Node  Tgt. Node  Targets                Type  Partition filter  Pending  First arrived   Completed
      ------------------------------------------------------------------------------------------------------------
        0          0          0        3  GLOBAL (Partition)             false    0 (0)            N/A         N/A
      

      Note that src and target are both 0, which makes no sense. In fact, the source should be 2, per this plan:

      Operator          #Hosts   Avg Time   Max Time  #Rows  Est. #Rows  Peak Mem  Est. Peak Mem  Detail                         
      ---------------------------------------------------------------------------------------------------------------------------
      03:AGGREGATE           1  108.968ms  108.968ms      1           1  28.00 KB        -1.00 B  FINALIZE                       
      02:HASH JOIN           1    3.525ms    3.525ms    620       7.30K   2.02 MB        -1.00 B  INNER JOIN, BROADCAST          
      |--06:EXCHANGE         1   25.798us   25.798us      2           2         0        -1.00 B  UNPARTITIONED                  
      |  05:EXCHANGE         1   31.942us   31.942us      2           2         0        -1.00 B  UNPARTITIONED                  
      |  01:SCAN HDFS        3  202.646ms  235.562ms      6           2  38.00 KB       32.00 MB  functional_seq_snap.alltype... 
      04:EXCHANGE            1  141.832us  141.832us    620       7.30K         0        -1.00 B  UNPARTITIONED                  
      00:SCAN HDFS           3  207.203ms  226.173ms    620       7.30K  64.59 KB      160.00 MB  functional_seq_snap.alltypes   
      

      The query is:

      with t1 as (select month x, bigint_col y from alltypes limit 7300),
              t2 as (select int_col x, bigint_col y from alltypestiny limit 2)
              select count(*) from t1, t2 where t1.x = t2.x
      

      The failure is intermittent, and not apparently dependent on file format.

      Attachments

        Activity

          People

            henryr Henry Robinson
            henryr Henry Robinson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: